--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 00:05:04 2018</p>
+         Last Run: Sat Jul 28 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -38,13 +38,13 @@
                         <td>4</td>
                         <td>6</td>
                         <td>SSE</td>
-                        <td>3</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
                         <td>36</td>
                         <td>5</td>
@@ -58,35 +58,35 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>6</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>21</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>1</td>
-                        <td>30</td>
+                        <td>0</td>
+                        <td>31</td>
                         <td>7</td>
                         <td>8</td>
                         <td>ESE</td>
-                        <td>24</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>1</td>
-                        <td>29</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>0</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>20</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,10 +133,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -146,10 +146,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -205,8 +205,8 @@
                  "0",
                  "0",
                  "0",
-                 "1",
-                 "1"
+                 "0",
+                 "0"
                ]
              },
              {
@@ -216,9 +216,9 @@
                "data":[
                  "41",
                  "36",
-                 "32",
-                 "30",
-                 "29"
+                 "33",
+                 "31",
+                 "30"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
+                 "4",
                  "14",
-                 "21",
-                 "24",
-                 "20"
+                 "23",
+                 "26",
+                 "23"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 00:05:04 2018</p>
+         Last Run: Sat Jul 28 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -274,21 +274,21 @@
                         <td>0</td>
                         <td>49</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>56</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
                         <td>51</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -298,21 +298,21 @@
                         <td>0</td>
                         <td>53</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>1</td>
+                        <td>24</td>
                         <td>61</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -427,7 +427,7 @@
                  "0",
                  "0",
                  "0",
-                 "1"
+                 "24"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "55",
-                 "53",
-                 "52"
+                 "50",
+                 "29",
+                 "37",
+                 "31"
                ]
              }
            ]
