--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 02:05:04 2018</p>
+         Last Run: Sat Jul 28 03:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -37,8 +37,8 @@
                         <td>42</td>
                         <td>4</td>
                         <td>6</td>
-                        <td>SSE</td>
-                        <td>3</td>
+                        <td>S</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -48,9 +48,9 @@
                         <td>0</td>
                         <td>37</td>
                         <td>5</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SE</td>
-                        <td>14</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -61,8 +61,8 @@
                         <td>33</td>
                         <td>6</td>
                         <td>6</td>
-                        <td>ESE</td>
-                        <td>25</td>
+                        <td>SE</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -70,23 +70,23 @@
                         <td>24</td>
                         <td>24</td>
                         <td>1</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>7</td>
                         <td>8</td>
                         <td>ESE</td>
-                        <td>23</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>1</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>ENE</td>
-                        <td>21</td>
+                        <td>E</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -136,7 +136,7 @@
                  "22",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              },
              {
@@ -149,7 +149,7 @@
                  "22",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              }
            ]
@@ -217,8 +217,8 @@
                  "42",
                  "37",
                  "33",
-                 "31",
-                 "30"
+                 "30",
+                 "29"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
+                 "4",
+                 "8",
+                 "11",
                  "14",
-                 "25",
-                 "23",
-                 "21"
+                 "14"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 02:05:04 2018</p>
+         Last Run: Sat Jul 28 03:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -268,27 +268,27 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
                         <td>49</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
                         <td>51</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>28</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -300,7 +300,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>36</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -308,11 +308,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>24</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>31</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -438,7 +438,7 @@
                  "49",
                  "51",
                  "53",
-                 "62"
+                 "61"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "28",
-                 "36",
-                 "31"
+                 "73",
+                 "52",
+                 "56",
+                 "48"
                ]
              }
            ]
