--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 08:05:03 2018</p>
+         Last Run: Sat Jul 28 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>47</td>
                         <td>4</td>
                         <td>5</td>
                         <td>SSE</td>
@@ -43,12 +43,12 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>40</td>
                         <td>5</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>SE</td>
                         <td>6</td>
                      </tr>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "20",
-                 "22",
+                 "21",
                  "23",
                  "24",
                  "24"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "20",
-                 "22",
+                 "21",
                  "23",
                  "24",
                  "24"
@@ -214,8 +214,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "37",
+                 "47",
+                 "40",
                  "33",
                  "31",
                  "29"
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 08:05:03 2018</p>
+         Last Run: Sat Jul 28 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,27 +269,27 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
                         <td>1</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>1</td>
                         <td>52</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>79</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -359,7 +359,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "23",
-                 "23",
+                 "22",
                  "22",
                  "20"
                ]
@@ -371,7 +371,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "23",
-                 "23",
+                 "22",
                  "22",
                  "20"
                ]
@@ -436,7 +436,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
+                 "50",
                  "52",
                  "54",
                  "62"
@@ -447,8 +447,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
                  "79",
+                 "78",
                  "67",
                  "54"
                ]
