--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 12:05:03 2018</p>
+         Last Run: Sat Jul 28 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>01:00 PM</td>
-                        <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>0</td>
-                        <td>30</td>
-                        <td>6</td>
-                        <td>6</td>
-                        <td>E</td>
-                        <td>7</td>
-                     </tr>
-                     <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>7</td>
-                        <td>8</td>
-                        <td>ENE</td>
                         <td>10</td>
+                        <td>ENE</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -58,11 +46,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>6</td>
-                        <td>10</td>
-                        <td>NE</td>
                         <td>11</td>
+                        <td>NE</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM",
              "03:00 PM"
            ],
@@ -106,7 +93,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
                  "25",
                  "25"
                ]
@@ -117,7 +103,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
                  "25",
                  "25"
                ]
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM",
              "03:00 PM"
            ],
@@ -171,7 +155,6 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -180,9 +163,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "28",
-                 "28"
+                 "27",
+                 "27"
                ]
              },
              {
@@ -190,9 +172,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "10",
-                 "11"
+                 "16",
+                 "16"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 12:05:03 2018</p>
+         Last Run: Sat Jul 28 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -239,7 +220,7 @@
                         <td>1</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>78</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -251,31 +232,31 @@
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>76</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>5</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>1</td>
                         <td>55</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>66</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>6</td>
-                        <td>62</td>
+                        <td>15</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -322,7 +303,7 @@
                "data":[
                  "23",
                  "22",
-                 "22",
+                 "21",
                  "20"
                ]
              },
@@ -334,7 +315,7 @@
                "data":[
                  "23",
                  "22",
-                 "22",
+                 "21",
                  "20"
                ]
              }
@@ -389,8 +370,8 @@
                "data":[
                  "0",
                  "0",
-                 "5",
-                 "6"
+                 "1",
+                 "15"
                ]
              },
              {
@@ -401,7 +382,7 @@
                  "51",
                  "53",
                  "55",
-                 "62"
+                 "63"
                ]
              },
              {
@@ -409,10 +390,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "76",
-                 "66",
-                 "57"
+                 "77",
+                 "75",
+                 "64",
+                 "64"
                ]
              }
            ]
